--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>devendran</title>
+    <title>Devendran</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Devendran is free PSD &amp; HTML template by @devendran">
@@ -20,7 +20,8 @@
 		}
 	</style>
 </head>
-<body>
+<div>
+	<body>
 	<!-- Navigation -->
 	<div class="main-nav">
 		<div class="container">
@@ -48,18 +49,27 @@
 		<div class="container">
 			<h1>RESUME</h1>
 			<p>Hi, I'm Devendran</p>
-			
+			<div class="units-row units-split wrap">
+			     <div class="unit-20">
+				<img src="img/ava.jpg" alt="Avatar">
+			</div>
+			<div class="unit-80"></div>
+		<h1>ABOUT ME<br><span id="typed"></span></h1>
+			</div>
 				<p>
 				As a driven and young professional ,i bring a combination of passsion,adaptibility and a strong work ethic to every task.with a background in designing the web and honed my skills in html,css
 				</p>
+	</div>
 			</div>
 		</div>
+	</div>
 
 
 	<!-- Education -->
 	<div class="Education" id="college">
 		<div class="container">
-			<h1>COLLEGE</h1>
+			<h1>EDUCATION</h1>
+			<h2>college</h2>
 			<p>c.abdhul hakeem college of engineering and technology</p>
 			<p>expected graduation : 2025</p>
 			
@@ -130,10 +140,23 @@
 		</div>
 	</footer>
 
-	
+
+	<!-- Javascript -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/typed.min.js"></script>
+    <script src="js/kube.min.js"></script>
+    <script src="js/site.js"></script>
+    <script>
+		function newTyped(){}$(function(){$("#typed").typed({
+			
+		strings: [" Devendran","INTERESTED IN CODING"],
+
+		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
+    </script>
+
 </body>
 </html>
-<style>/* Global Styles */
+<style>/* Global Style */
 
 	body {
 		font-family: 'Lato', sans-serif;
