--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
     <link rel="stylesheet" href="css/kube.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/custom.min.css" />
-    <link rel="shortcut icon" href="img/favicon.png" />
 	<link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
 		.intro h1:before {
 			/* Edit this with your name or anything else */
-			content: 'Devendran'
+			content: 'DEVA'
 		}
 	</style>
 </head>
-<div>
 	<body>
 	<!-- Navigation -->
 	<div class="main-nav">
 		<div class="container">
 			<header class="group top-nav">
 				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
-				    <span class="logo">Devendran</span>
+				    <span class="logo">DEVA</span>
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
 				        <li class="active"><a href="#about">About</a></li>
-						<li><a href="#education">education</a></li>
 				        <li><a href="#project">projects</a></li>
 				        <li><a href="#achievements">Achievements</a></li>
 				        <li><a href="#skills">Skills</a></li>
+						<li><a href="#resume">Resume</a></li>
+						<li><a href="Certificate">Certificate</a></li>
+						<li><a href="Contacts ">Contacts</a></li>
 				    </ul>
 				</nav>
 			</header>
@@ -47,14 +47,15 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<h1>RESUME</h1>
+			<h1>PORTFOlIO</h1>
 			<p>Hi, I'm Devendran</p>
 			<div class="units-row units-split wrap">
 			     <div class="unit-20">
 				<img src="img/ava.jpg" alt="Avatar">
 			</div>
 			<div class="unit-80"></div>
-		<h1>ABOUT ME<br><span id="typed"></span></h1>
+		<h1>I am<br><span id="typed"></span></h1>
+		<h3>Aspiring as a Developer</h3>
 			</div>
 				<p>
 				As a driven and young professional ,i bring a combination of passsion,adaptibility and a strong work ethic to every task.with a background in designing the web and honed my skills in html,css
@@ -65,23 +66,13 @@
 	</div>
 
 
-	<!-- Education -->
-	<div class="Education" id="college">
-		<div class="container">
-			<h1>EDUCATION</h1>
-			<h2>college</h2>
-			<p>c.abdhul hakeem college of engineering and technology</p>
-			<p>expected graduation : 2025</p>
-			
-		</div>
-	 </div>
-
 	<!-- project -->
 	<div class="work section second" id="projects">
 		<div class="container">
 			<h1><br>projects</h1>
 			<ul class="work-list">
 				<li>based on embedded iot developed a ultra sonic radar detection system</li>
+				<li>created a own portfolio </li>
 			</ul>
 		</div>
 	</div>
@@ -122,10 +113,81 @@
 		</div>
 	</div>
 
+    <!--resume-->
+		<div class="portfolio-container">
+		  <!-- existing portfolio content -->
+		</div>
+		<h1 style="text-align: center;">Resume</h1>
+		<div class="resume-container">
+		  <embed src="img/Resume.jpg" width="100%" height="800px">
+		  <!-- or -->
+		  <object data="resume.pdf" type="application/pdf" width="100%" height="800px">
+			<a href="img/Resume.jpg" download><B></B>Download Resume</a>
+
+		  </object>
+		</div>
+
+
+	<!--Certificate-->
+	<h1 style="text-align: center;">Certificates</h1>
+	<div class="portfolio-container">
+		<div class="column">
+			<img src="img/image1.jpg" alt="Image 1">
+			<h4>Certificate 1</h4>
+		</div>
+		<div class="column">
+			<img src="img/image2.jpg" alt="Image 2">
+			<h4>Certificate 2</h4>
+		</div>
+		<div class="column">
+			<img src="img/image3.jpg" alt="Image 3">
+			<h4>Certificate 3</h4>
+		</div>
+		<div class="column">
+			<img src="img/image4.jpg" alt="Image 4">
+			<h4>Certificate 4</h4>
+		</div>
+	</div>
+
+	<!--contact us-->
+	<div class="contact-container">
+		<h2>Contact Me</h2>
+		<p>Get in touch with me through any of the following channels:</p>
+		<ul>
+		  <li>
+			<i class="fa fa-phone"></i>
+			<a href="tel:+91 6369813965">+91 6369813965</a>
+		  </li>
+		  <li>
+			<i class="fa fa-envelope"></i>
+			<a href="mailto:cr444382@email.com">cr444382@gmail.com</a>
+		  </li>
+		  <li>
+			<i class="fa fa-linkedin"></i>
+			<a href="(https://www.linkedin.com/in/devendran-v-t-a61763248/)">LinkedIn</a>
+		  </li>
+		  <li>
+			<i class="fa fa-github"></i>
+			<a href="(https://github.com/Devendran30)">GitHub</a>
+		  </li>
+		</ul>
+		<p>Or fill out the form below:</p>
+		<form>
+		  <label for="name">Name:</label>
+		  <input type="text" id="name" name="name"><br><br>
+		  <label for="email">Email:</label>
+		  <input type="email" id="email" name="email"><br><br>
+		  <label for="message">Message:</label>
+		  <textarea id="message" name="message"></textarea><br><br>
+		  <button type="submit">Send</button>
+		</form>
+	  </div>
+	  
+
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
-			<h1>fight against the ugliness.</h1>
+			<h1>Be the strongest</h1>
 		</div>
 	</div>
 
@@ -139,22 +201,28 @@
 			</div>
 		</div>
 	</footer>
-
-
-	<!-- Javascript -->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/typed.min.js"></script>
-    <script src="js/kube.min.js"></script>
-    <script src="js/site.js"></script>
-    <script>
-		function newTyped(){}$(function(){$("#typed").typed({
-			
-		strings: [" Devendran","INTERESTED IN CODING"],
-
-		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
-    </script>
-
-</body>
+      <!-- JavaScript -->
+	  <script src="js/jquery.min.js"></script>
+	  <script src="js/typed.min.js"></script>
+	  <script src="js/kube.min.js"></script>
+	  <script src="js/site.js"></script>
+	  <script>
+		  function newTyped() {}
+		  $(function() {
+			  $("#typed").typed({
+				  strings: ["Devendran", "FROM CAHCET", "INTERESTED IN CODING"],
+				  typeSpeed: 90,
+				  backDelay: 700,
+				  contentType: "html",
+				  loop: true,
+				  resetCallback: function() { newTyped(); }
+			  });
+			  $(".reset").click(function() {
+				  $("#typed").typed("reset");
+			  });
+		  });
+	  </script>
+	  </body>
 </html>
 <style>/* Global Style */
 
@@ -226,7 +294,7 @@
 	.intro p {
 		font-size: 1.2em;
 		margin-bottom: 20px;
-		color: #555;
+		color: #04030c;
 	}
 	
 	.intro h1 {
@@ -245,7 +313,7 @@
 		transform: translateX(-50%);
 		width: 50%;
 		height: 2px;
-		background-color: #333;
+		background-color: #050403;
 	}
 	
 	.intro .unit-20 {
@@ -352,8 +420,140 @@
 		font-size: 1.1em;
 		margin-bottom: 15px;
 	}
-	
-	/* Quote Section */
+
+
+	/*resume section*/ 
+
+	.resume-container {
+     max-width: 800px;
+     margin: 40px auto;
+     padding: 20px;
+	 text-align: center;
+     background-color: #f0f0f0;
+    border: 1px solid #0f0707;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .resume h1 {
+		font-family: 'Playfair Display SC', serif;
+		font-size: 3em;
+		font-weight: 700;
+		margin-bottom: 40px;
+		text-align:center;
+	}
+        .resume-container h2 {
+         margin-top: 0;
+    }
+
+    .resume-container embed,
+    .resume-container object {
+    width: 100%;
+    height: 100%;
+    } 
+
+    /*Certicate section*/
+    .portfolio-container {
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: center;
+     max-width: 1200px;
+     margin: 40px auto;
+    }
+
+    .column {
+     flex-basis: 25%;
+     margin: 10px;
+     display: flex;
+     flex-direction: column;
+     align-items: order;
+    }
+
+    .column img {
+     width: 100%;
+     height: 150px;
+     object-fit: cover;
+     border-radius: 10px;
+     margin-bottom: 10px;
+    }
+
+    .column h4 {
+     font-weight: bold;
+     margin-top: 0;
+    }
+
+/* Responsive design */
+@media only screen and (max-width: 768px) {
+  .column {
+    flex-basis: 50%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .column {
+    flex-basis: 100%;
+  }
+}
+
+.contact-container {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: #f0f0f0;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/*Contact section*/
+
+.contact-container h2 {
+  margin-top: 0;
+}
+
+.contact-container ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.contact-container li {
+  margin-bottom: 10px;
+}
+
+.contact-container i {
+  margin-right: 10px;
+}
+
+.contact-container form {
+  margin-top: 20px;
+}
+
+.contact-container label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.contact-container input, textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+}
+
+.contact-container button[type="submit"] {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.contact-container button[type="submit"]:hover {
+  background-color: #444;
+}
+
+
+    /* Quote Section */
 	
 	.quote {
 		padding: 80px 0;
@@ -403,4 +603,4 @@
 	footer .social li a:hover {
 		color: #ffc107; /* change to your preferred hover color */
 	}
-	</style>
+</style>
