--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 		<div class="container">
 			<header class="group top-nav">
 				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
-				    <span class="logo">DEVA</span>
+				    <span class="logo"></span>
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
-				        <li class="active"><a href="#about">About</a></li>
+				        <li class="active"></li>
+						<li><a href="#about">About</a></li>
 				        <li><a href="#project">projects</a></li>
 				        <li><a href="#achievements">Achievements</a></li>
 				        <li><a href="#skills">Skills</a></li>
@@ -47,18 +48,20 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<h1>PORTFOlIO</h1>
-			<p>Hi, I'm Devendran</p>
+
+		</div>
 			<div class="units-row units-split wrap">
 			     <div class="unit-20">
 				<img src="img/ava.jpg" alt="Avatar">
 			</div>
-			<div class="unit-80"></div>
-		<h1>I am<br><span id="typed"></span></h1>
+			<div class="unit-80">
+            </div>
+			<h4>hi i'm Devendran</h4>
+		<h3>I am<br><span id="typed"></span></h3>
 		<h3>Aspiring as a Developer</h3>
 			</div>
 				<p>
-				As a driven and young professional ,i bring a combination of passsion,adaptibility and a strong work ethic to every task.with a background in designing the web and honed my skills in html,css
+				<br>As a driven and young professional ,i bring a combination of passsion<br>,adaptibility and a strong work ethic to every task.with a background in designing the web and honed my skills in html,css
 				</p>
 	</div>
 			</div>
@@ -69,10 +72,12 @@
 	<!-- project -->
 	<div class="work section second" id="projects">
 		<div class="container">
-			<h1><br>projects</h1>
+			<h1><br><u>Projects</u></h1>
 			<ul class="work-list">
-				<li>based on embedded iot developed a ultra sonic radar detection system</li>
-				<li>created a own portfolio </li>
+				<li>Based on embedded iot developed a ultra sonic radar detection system</li>
+			</ul>
+				<u1 class="work-list">
+                <li>Created a own portfolio </li>
 			</ul>
 		</div>
 	</div>
@@ -80,16 +85,16 @@
 	<!-- Award & Achievements -->
 	<div class="project section second" id="achievements">
 		<div class="container">
-			<h1>personal &amp;<br>Achievements</h1>
+			<h1><u>personal &amp<br>Achievements</u></h1>
 			<ul class="award-list list-flat">
-				<li>attended 2 workshop sessions</li>
+				<li>Attended 2 workshop sessions</li>
 				
 			</ul>
 			<ul class="project-list list-flat">
-				<li>joined in hackathon</li>
+				<li>Joined in hackathon</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>participated in project expo</li>
+				<li>Participated in project expo</li>
 			</ul>
 		</div>
 	</div>
@@ -97,7 +102,7 @@
 	<!-- Technical Skills -->
 	<div class="skills section second" id="skills">
 		<div class="container">
-			<h1>Technical<br>Skills</h1>
+			<h1><u>Technical<br>Skills</u></h1>
 			<ul class="skill-list list-flat">
 				<li>Web Technology</li>
 				<li>HTML / CSS / Javascript</li>
@@ -117,19 +122,19 @@
 		<div class="portfolio-container">
 		  <!-- existing portfolio content -->
 		</div>
-		<h1 style="text-align: center;">Resume</h1>
+		<h1 style="text-align: center;"><u>Resume</u></h1>
 		<div class="resume-container">
-		  <embed src="img/Resume.jpg" width="100%" height="800px">
+		  <embed src="files/resume.pdf" width="100%" height="800px">
 		  <!-- or -->
 		  <object data="resume.pdf" type="application/pdf" width="100%" height="800px">
-			<a href="img/Resume.jpg" download><B></B>Download Resume</a>
+			<a href="files/resume.pdf" download><B></B>Download Resume</a>
 
 		  </object>
 		</div>
 
 
 	<!--Certificate-->
-	<h1 style="text-align: center;">Certificates</h1>
+	<h1 style="text-align: center;"><u>Certificates</u></h1>
 	<div class="portfolio-container">
 		<div class="column">
 			<img src="img/image1.jpg" alt="Image 1">
@@ -150,8 +155,8 @@
 	</div>
 
 	<!--contact us-->
+	<h1 style="text-align: center;"><u>Contact Us</u></h1>
 	<div class="contact-container">
-		<h2>Contact Me</h2>
 		<p>Get in touch with me through any of the following channels:</p>
 		<ul>
 		  <li>
@@ -210,7 +215,7 @@
 		  function newTyped() {}
 		  $(function() {
 			  $("#typed").typed({
-				  strings: ["Devendran", "FROM CAHCET", "INTERESTED IN CODING"],
+				  strings: ["Devendran", "FROM VELLORE", "INTERESTED IN CODING"],
 				  typeSpeed: 90,
 				  backDelay: 700,
 				  contentType: "html",
@@ -245,7 +250,7 @@
 	/* Navigation */
 	
 	.main-nav {
-		background-color: #333;
+		background-color: #514c4c;
 		color: #fff;
 		padding: 10px 0;
 		position: fixed;
@@ -282,7 +287,7 @@
 	}
 	
 	.main-nav nav ul li a:hover {
-		color: #ffc107; /* change to your preferred hover color */
+		color: #b7b4ac; /* change to your preferred hover color */
 	}
 	
 	/* Introduction Section */
@@ -358,6 +363,7 @@
 		font-size: 3em;
 		font-weight: 700;
 		margin-bottom: 40px;
+		color:#000000;
 	}
 	
 	.Project .Projects-list {
@@ -442,6 +448,7 @@
 		font-weight: 700;
 		margin-bottom: 40px;
 		text-align:center;
+		color: #2157c2;
 	}
         .resume-container h2 {
          margin-top: 0;
