--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 				    <ul>
 				        <li class="active"></li>
 						<li><a href="#about">About</a></li>
-				        <li><a href="#project">projects</a></li>
+				        <li><a href="#projects">projects</a></li>
 				        <li><a href="#achievements">Achievements</a></li>
 				        <li><a href="#skills">Skills</a></li>
 						<li><a href="#resume">Resume</a></li>
-						<li><a href="Certificate">Certificate</a></li>
-						<li><a href="Contacts ">Contacts</a></li>
+						<li><a href="#Certificate">Certificate</a></li>
+						<li><a href="#Contact Us ">Contact Us</a></li>
 				    </ul>
 				</nav>
 			</header>
@@ -72,7 +72,7 @@
 	<!-- project -->
 	<div class="work section second" id="projects">
 		<div class="container">
-			<h1><br><u>Projects</u></h1>
+			<h1><br><u>projects</u></h1>
 			<ul class="work-list">
 				<li>Based on embedded iot developed a ultra sonic radar detection system</li>
 			</ul>
@@ -119,7 +119,7 @@
 	</div>
 
     <!--resume-->
-		<div class="portfolio-container">
+		<div class="portfolio-container" id="resume">
 		  <!-- existing portfolio content -->
 		</div>
 		<h1 style="text-align: center;"><u>Resume</u></h1>
@@ -134,8 +134,8 @@
 
 
 	<!--Certificate-->
-	<h1 style="text-align: center;"><u>Certificates</u></h1>
-	<div class="portfolio-container">
+	<h1 style="text-align: center;"><u>Certificate</u></h1>
+	<div class="portfolio-container" id="Certificate">
 		<div class="column">
 			<img src="img/image1.jpg" alt="Image 1">
 			<h4>Certificate 1</h4>
@@ -156,7 +156,7 @@
 
 	<!--contact us-->
 	<h1 style="text-align: center;"><u>Contact Us</u></h1>
-	<div class="contact-container">
+	<div class="contact-container" id="Contact Us">
 		<p>Get in touch with me through any of the following channels:</p>
 		<ul>
 		  <li>
@@ -545,7 +545,7 @@
   width: 100%;
   padding: 10px;
   margin-bottom: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid #701818;
 }
 
 .contact-container button[type="submit"] {
